[gd_scene load_steps=4 format=2]

[ext_resource path="res://AreaTransition.gd" type="Script" id=1]
[ext_resource path="res://CanvasModulate/TransitionAnimation.tscn" type="PackedScene" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 41.5, 20.361 )

[node name="AreaTransition" type="Area2D"]
position = Vector2( -2, -1 )
scale = Vector2( 1.14571, 1.14104 )
collision_layer = 16
collision_mask = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="TransitionScreen" parent="." instance=ExtResource( 2 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -9.53674e-07, 0 )
shape = SubResource( 1 )

[connection signal="body_entered" from="." to="." method="_on_AreaTransition_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_AreaTransition_body_exited"]
[connection signal="transitioned" from="TransitionScreen" to="." method="_on_TransitionScreen_transitioned"]
